--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -23,6 +23,12 @@ jobs:
           registry-url: 'https://npm.pkg.github.com'
           scope: '@christiango'
 
+      - name: Set npm version
+        run: |
+          echo "Setting package version to: ${{ github.event.release.tag_name }}"
+          npm version ${{ github.event.release.tag_name }} --git-tag-version=false
+          echo "Package version set to: $(npm pkg get version | tr -d '"')"
+
       - name: Publish to npm
         run: npm publish
         env:
